
* GITHUB#14209: Deprecate Operations.union(Automaton,Automaton) and
  concatenate(Automaton,Automaton) in favor of the methods taking List.  (Robert Muir)

* GITHUB#14236: CombinedFieldQuery moved from lucene-sandbox to lucene-core.
  (Adrien Grand)

* GITHUB#14282: Remove redundant field argument from the DocIdSetBuilder constructor that takes a
  PointValues instance. (Luca Cavanna)

New Features
---------------------

* GITHUB#14084, GITHUB#13635, GITHUB#13634, GITHUB#14170: Adds new `SeededKnnVectorQuery` query.
  These queries allow for the vector search entry points to be initialized via a `seed` query. This follows
  the research provided via https://arxiv.org/abs/2307.16779. (Sean MacAvaney, Ben Trent).

* GITHUB#13974: Introducing DocValuesMultiRangeQuery.SortedSetStabbingBuilder into sandbox. (Mikhail Khludnev)

* GITHUB#14204: Added HistogramCollectorManager to efficiently compute a
  histogram of the distribution of the values of a field, for documents
  matching a given query. (Adrien Grand)

Improvements
---------------------

* GITHUB#14079: Hunspell Dictionary now supports an option to tolerate REP rule count mismatches.
  (Robert Muir)

* GITHUB#14113: Remove unnecessary ByteArrayDataInput allocations from `Lucene90DocValuesProducer$TermsDict.decompressBlock`. (Ankit Jain)

* GITHUB#14138: Implement IntersectVisitor#visit(IntsRef) in  many of the current implementations and add
  BulkAdder#add(IntsRef) method. They should provide better performance due to less virtual method calls and
  more efficient bulk processing. (Ignacio Vera)

* GITHUB#14107, GITHUB#14124, GITHUB#14103: Optimize DirectIOIndexInput; add
  individual and bulk data retrieval overloads; avoid double buffering with
  slices. (Chris Hegarty)

* GITHUB#14166: Log(ByteSize|Doc)MergePolicy now allow merging more than
  mergeFactor segments together when the merge is below the min merge size.
  (Adrien Grand)
